--- a/MyoMusicController/src/main/res/values/strings.xml
+++ b/MyoMusicController/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Myo Music Controller</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
+    <string name="pose">Pose: %s</string>
 
 </resources>
